--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   </div>
 
   <script>
-    const mapGraph = {
+   const mapGraph = {
   "Seattle": [
     { city: "Portland", distance: 174, driveTime: "2h 45m" },
     { city: "Billings", distance: 750, driveTime: "11h 0m" },
@@ -272,7 +272,8 @@
   "New Orleans": [
     { city: "Houston", distance: 350, driveTime: "5h 0m" },
     { city: "Memphis", distance: 400, driveTime: "6h 0m" },
-    { city: "Jacksonville", distance: 546, driveTime: "8h 0m" }
+    { city: "Jacksonville", distance: 546, driveTime: "8h 0m" },
+    { city: "Atlanta", distance: 470, driveTime: "7h 0m" }
   ],
   "Atlanta": [
     { city: "Charlotte", distance: 245, driveTime: "3h 40m" },
